--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,6 @@
 name: retinal_analysis
 channels:
-  - defaults
+  - conda-forge
 dependencies:
   - python=3.10
   - pip
@@ -8,15 +8,12 @@ dependencies:
   - pip:
       - torch
       - torchvision
-      - tifffile
-      - nnunet
-      - nnunetv2
-      - scipy
-      - pathlib
-      - scikit-image
-      - connected-components-3d
-      - pandas
-      - skan
-      - pickle-mixin
+      - tifffile==2023.2.28
+      - nnunetv2==2.5.1
+      - scipy==1.12.0
+      - pathlib==1.0.1
+      - scikit-image==0.22.0
+      - connected-components-3d==3.12.4
+      - pandas==2.2.2
+      - skan==0.12.2
       - napari[all]
-
